--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 .idea
 information.txt
+chapter-01/recipe-01/cmake-build-debug
+chapter-01/recipe-01/cmake-build-release
+chapter-01/recipe-02/cmake-build-debug
+chapter-01/recipe-02/cmake-build-release
+chapter-01/recipe-03/cmake-build-debug
+chapter-01/recipe-03/cmake-build-release
+chapter-01/recipe-04/cmake-build-debug
+chapter-01/recipe-04/cmake-build-release
+chapter-01/recipe-05/cmake-build-debug
+chapter-01/recipe-05/cmake-build-release
+chapter-01/recipe-06/cmake-build-debug
+chapter-01/recipe-06/cmake-build-release
+chapter-01/recipe-07/cmake-build-debug
+chapter-01/recipe-07/cmake-build-release
+chapter-01/recipe-08/cmake-build-debug
+chapter-01/recipe-08/cmake-build-release
+chapter-01/recipe-09/cmake-build-debug
+chapter-01/recipe-09/cmake-build-release
+chapter-01/recipe-10/cmake-build-debug
+chapter-01/recipe-10/cmake-build-release
+chapter-01/recipe-10/build
+chapter-01/recipe-11/cmake-build-debug
+chapter-01/recipe-11/cmake-build-release
